# habit-goal-alignment-checker

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
api/: analyze.py  assets.py  engine.py  graph.py
public/: app.js  index.html  style.css
