[project]
name = "habit-goal-alignment-checker"
version = "1.0.0"
description = "Rule-based habit-to-goal alignment checker with NetworkX and Plotly"
requires-python = ">=3.12"
dependencies = [
    "flask==3.0.3",
    "networkx==3.3",
    "plotly==5.24.1",
    "numpy==2.1.3",
]

[tool.vercel]
entrypoint = "api.analyze:app"
